--- a/Desafio 6/index.html
+++ b/Desafio 6/index.html
@@ -8,8 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-    <div class="continer" id="contenedor">
+    <div class="container" id="contenedor">
         <div class="col-6" id="principal"></div>
+        <div class="col-6" id="cont"></div>
     </div>
     <script src="js/js.js"></script>
 </body>
